# storage/api-docs/api-docs.json
@@ -13,28 +13,28 @@
                 "summary": "Login",
                 "description": "Login",
                 "operationId": "login",
-                "parameters": [
-                    {
-                        "name": "email",
-                        "in": "query",
-                        "description": "Phone Number",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "example": "0941649826"
-                    },
-                    {
-                        "name": "password",
-                        "in": "query",
-                        "description": "Password",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "example": "admin"
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "id": {
+                                        "type": "string"
+                                    },
+                                    "name": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "id": "a3fb6",
+                                    "name": "Jessica Smith",
+                                    "phone": 12345678
+                                }
+                            }
+                        }
                     }
-                ],
+                },
                 "responses": {
                     "200": {
                         "description": "Successful operation"
@@ -179,6 +179,117 @@
                         "api_key_security_example": []
                     }
                 ]
+            },
+            "post": {
+                "tags": [
+                    "Seasons"
+                ],
+                "summary": "New Season",
+                "description": "",
+                "operationId": "newSeason",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "name": "2023"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    }
+                },
+                "security": [
+                    {
+                        "api_key_security_example": []
+                    }
+                ]
+            }
+        },
+        "/api/seasons/{id}": {
+            "get": {
+                "tags": [
+                    "Seasons"
+                ],
+                "summary": "show Season",
+                "description": "",
+                "operationId": "getSeasonDetails",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "season_id",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    }
+                },
+                "security": [
+                    {
+                        "api_key_security_example": []
+                    }
+                ]
+            },
+            "patch": {
+                "tags": [
+                    "Seasons"
+                ],
+                "summary": "Update Season",
+                "description": "",
+                "operationId": "updateSeason",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "name": "2023"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    }
+                },
+                "security": [
+                    {
+                        "api_key_security_example": []
+                    }
+                ]
             }
         },
         "/api/users": {
@@ -222,88 +333,6 @@
                 "summary": "Create User",
                 "description": "",
                 "operationId": "createUserList",
-                "parameters": [
-                    {
-                        "name": "name",
-                        "in": "query",
-                        "description": "Fullname",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "example": "Hong An"
-                    },
-                    {
-                        "name": "role_id",
-                        "in": "query",
-                        "description": "Role",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "example": "1"
-                    },
-                    {
-                        "name": "address",
-                        "in": "query",
-                        "description": "Address",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "example": "Can Tho"
-                    },
-                    {
-                        "name": "phone",
-                        "in": "query",
-                        "description": "Phone number, unique",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "example": "0941649826"
-                    },
-                    {
-                        "name": "gender",
-                        "in": "query",
-                        "description": "Gender",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "example": "Male/Female"
-                    },
-                    {
-                        "name": "birthday",
-                        "in": "query",
-                        "description": "Birthday",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "example": "21/04/2000"
-                    },
-                    {
-                        "name": "email",
-                        "in": "query",
-                        "description": "Email, unique",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "example": "phamle21@gmail.com"
-                    },
-                    {
-                        "name": "password",
-                        "in": "query",
-                        "description": "Password",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "example": "phamle21"
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "Successful operation"
